crates/credential/tests/probes/scheme_sensitivity_no_zeroize.stderr
error[E0277]: the trait bound `ManualScheme: zeroize::ZeroizeOnDrop` is not satisfied
  --> tests/probes/scheme_sensitivity_no_zeroize.rs:19:26
   |
19 | impl SensitiveScheme for ManualScheme {} // E0277 — ZeroizeOnDrop not satisfied
   |                          ^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `zeroize::ZeroizeOnDrop` is not implemented for `ManualScheme`
  --> tests/probes/scheme_sensitivity_no_zeroize.rs:9:1
   |
 9 | struct ManualScheme {
   | ^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `zeroize::ZeroizeOnDrop`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
           and $N others
note: required by a bound in `SensitiveScheme`
  --> $WORKSPACE/crates/core/src/auth.rs
   |
   | pub trait SensitiveScheme: AuthScheme + ZeroizeOnDrop {}
   |                                         ^^^^^^^^^^^^^ required by this bound in `SensitiveScheme`
   = note: `SensitiveScheme` is a "sealed trait", because to implement it you also need to implement `zeroize::ZeroizeOnDrop`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following types implement the trait:
             nebula_credential::NoPendingState
             nebula_credential::OAuth2State
             nebula_credential::OAuth2Pending
             nebula_credential::Certificate
             nebula_credential::ConnectionUri
             nebula_credential::IdentityPassword
             nebula_credential::KeyPair
             nebula_credential::OAuth2Token
           and $N others
